# OTA_ESP32_STM32F103C8T6

ESP32/DOWNLOAD_FIRMWARE/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32/DOWNLOAD_FIRMWARE/html/: index.html
ESP32/DOWNLOAD_FIRMWARE/lib/Bootloader_App/: CMakeLists.txt  bootloader_app.c  bootloader_app.h
ESP32/DOWNLOAD_FIRMWARE/lib/Download/: CMakeLists.txt  download.c  download.h
ESP32/DOWNLOAD_FIRMWARE/lib/File_hex/: CMakeLists.txt  process_file_hex.c  process_file_hex.h
ESP32/DOWNLOAD_FIRMWARE/lib/Http_Server_App/: CMakeLists.txt  http_server_app.c  http_server_app.h
ESP32/DOWNLOAD_FIRMWARE/main/: app_main.c
STM32F103C8T6/BOOTLOADER/: STM32_BOOTLOADER.ioc
STM32F103C8T6/BOOTLOADER/APP/: boot_loader.c  boot_loader.h  bootloader_command.c  bootloader_command.h  uart.h
STM32F103C8T6/BOOTLOADER/FLASH/: flash.c  flash.h
STM32F103C8T6/BOOTLOADER/JUMP_TO_APP/: jump_to_app.c  jump_to_app.h
STM32F103C8T6/BOOTLOADER/LOG/: log.c  log.h
STM32F103C8T6/BOOTLOADER/MDK-ARM/: STM32_BOOTLOADER.uvguix.THIEN  STM32_BOOTLOADER.uvoptx  STM32_BOOTLOADER.uvprojx  startup_stm32f103xb.lst
STM32F103C8T6/BOOTLOADER/MIN/: min.c  min.h  port_min.c
STM32F103C8T6/BOOTLOADER/RING_BUFFER/: ring_buffer.c  ring_buffer.h
STM32F103C8T6/DEMO_APP/: DEMO_APP.ioc
STM32F103C8T6/DEMO_APP/APP/: uart.c
STM32F103C8T6/DEMO_APP/MDK-ARM/: DEMO_APP.uvguix.THIEN  DEMO_APP.uvoptx  DEMO_APP.uvprojx  startup_stm32f103xb.lst
WEBSERVER/: Test.txt  package-lock.json  package.json  server.js
WEBSERVER/public/: index.html
WEBSERVER/uploads/: Firmware_1.hex  firmware.json
(+126 files in other folders)
